{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 229,
  "lineage": "84f24f93-ca3a-e871-5516-f29c66ac4ef9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041bf1f3a11f51183",
            "association_id": "eipassoc-06d31639f50788ac7",
            "domain": "vpc",
            "id": "eipalloc-041bf1f3a11f51183",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0828ce9327f329755",
            "private_dns": "ip-10-0-1-168.sa-east-1.compute.internal",
            "private_ip": "10.0.1.168",
            "public_dns": "ec2-54-232-87-59.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.232.87.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc_eks-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-sa-east-1a",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1faee6346c3cd8d",
            "association_id": "eipassoc-037649b2ce3a8c91a",
            "domain": "vpc",
            "id": "eipalloc-0e1faee6346c3cd8d",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0b3d1378fca600c6f",
            "private_dns": "ip-10-0-2-133.sa-east-1.compute.internal",
            "private_ip": "10.0.2.133",
            "public_dns": "ec2-18-230-29-4.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.29.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc_eks-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-sa-east-1c",
              "terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:internet-gateway/igw-0817097db3e08f4e7",
            "id": "igw-0817097db3e08f4e7",
            "owner_id": "662072000689",
            "tags": {
              "Name": "vpc_eks",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b5e81b583f8bd4c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041bf1f3a11f51183",
            "connectivity_type": "public",
            "id": "nat-09d284c4ab8a52697",
            "network_interface_id": "eni-0828ce9327f329755",
            "private_ip": "10.0.1.168",
            "public_ip": "54.232.87.59",
            "subnet_id": "subnet-0cf71f221b114b4d1",
            "tags": {
              "Name": "vpc_eks-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-sa-east-1a",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1faee6346c3cd8d",
            "connectivity_type": "public",
            "id": "nat-066897d7fa242c5c1",
            "network_interface_id": "eni-0b3d1378fca600c6f",
            "private_ip": "10.0.2.133",
            "public_ip": "18.230.29.4",
            "subnet_id": "subnet-0cafca840311fd64c",
            "tags": {
              "Name": "vpc_eks-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-sa-east-1c",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00d11fd0a34fd2fe81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09d284c4ab8a52697",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d11fd0a34fd2fe8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e0a99b97dc8c05c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-066897d7fa242c5c1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0a99b97dc8c05c1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0817097db3e08f4e7",
            "id": "r-rtb-024aec7bce1e0a89c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024aec7bce1e0a89c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:route-table/rtb-00d11fd0a34fd2fe8",
            "id": "rtb-00d11fd0a34fd2fe8",
            "owner_id": "662072000689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09d284c4ab8a52697",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_eks-private-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-private-sa-east-1a",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5e81b583f8bd4c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:route-table/rtb-0e0a99b97dc8c05c1",
            "id": "rtb-0e0a99b97dc8c05c1",
            "owner_id": "662072000689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066897d7fa242c5c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_eks-private-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-private-sa-east-1c",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5e81b583f8bd4c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:route-table/rtb-024aec7bce1e0a89c",
            "id": "rtb-024aec7bce1e0a89c",
            "owner_id": "662072000689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0817097db3e08f4e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_eks-public",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-public",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5e81b583f8bd4c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9051a00c139ff47",
            "route_table_id": "rtb-00d11fd0a34fd2fe8",
            "subnet_id": "subnet-0a73bd42e54875e57"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0728226ca46177aba",
            "route_table_id": "rtb-0e0a99b97dc8c05c1",
            "subnet_id": "subnet-0f335398854b0e0d2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00046fb090c9f15f9",
            "route_table_id": "rtb-024aec7bce1e0a89c",
            "subnet_id": "subnet-0cf71f221b114b4d1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023ba2260e76076a4",
            "route_table_id": "rtb-024aec7bce1e0a89c",
            "subnet_id": "subnet-0cafca840311fd64c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:subnet/subnet-0a73bd42e54875e57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a73bd42e54875e57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662072000689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_eks-private-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-private-sa-east-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b5e81b583f8bd4c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:subnet/subnet-0f335398854b0e0d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f335398854b0e0d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662072000689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_eks-private-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-private-sa-east-1c",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b5e81b583f8bd4c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:subnet/subnet-0cf71f221b114b4d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf71f221b114b4d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "662072000689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_eks-public-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-public-sa-east-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b5e81b583f8bd4c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:subnet/subnet-0cafca840311fd64c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cafca840311fd64c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "662072000689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_eks-public-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-public-sa-east-1c",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b5e81b583f8bd4c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:vpc/vpc-0b5e81b583f8bd4c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac2b016d206f612b",
            "default_route_table_id": "rtb-082e1a406b8f02eed",
            "default_security_group_id": "sg-00f84849d00472883",
            "dhcp_options_id": "dopt-66411801",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b5e81b583f8bd4c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082e1a406b8f02eed",
            "owner_id": "662072000689",
            "tags": {
              "Name": "vpc_eks",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}